# NEAR-FT-Easy-Deploy

./: Cargo.toml  Dockerfile  README.md  build.bat  build.sh  run.bat  run.sh
near-ft/: run.sh
near-ft/src/: lib.rs
